2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_powerpc_fads.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2003-03-07  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_stub.h: Remove [confusing] platform specific include.

2002-06-27  Gary Thomas  <gary@chez-thomas.org>

	* include/plf_regs.h: New file - platform overrides.

2002-04-11  Gary Thomas  <gthomas@redhat.com>

	* include/plf_cache.h: Cache control is in hal/common CDL.

2001-01-26  Jesper Skov  <jskov@redhat.com>

	* include/plf_stub.h: Moved reset macro to
	* include/plf_intr.h: this file.

2000-10-20  Jonathan Larmour  <jlarmour@redhat.com>

	* include/pkgconf/mlt_powerpc_fads_ram.mlt:
	Repair RAM layout

	* include/pkgconf/mlt_powerpc_fads_ram.mlt:
	* include/pkgconf/mlt_powerpc_fads_rom.mlt:
	Add heap1 section

	* include/pkgconf/mlt_powerpc_fads_ram.h:
	* include/pkgconf/mlt_powerpc_fads_rom.h:
	* include/pkgconf/mlt_powerpc_fads_ram.ldi:
	* include/pkgconf/mlt_powerpc_fads_rom.ldi:
	Regenerated

2000-07-17  Jesper Skov  <jskov@redhat.com>

	* src/hal_aux.c (hal_platform_init): Don't call hal_if_init just
	yet.

2000-06-26  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_powerpc_fads.cdl: Removed ROM_DEBUG_CHANNEL option.

2000-06-15  Jesper Skov  <jskov@redhat.com>

	* src/hal_diag.c: 
	* src/hal_aux.c: 
	* include/pkgconf/mlt_powerpc_fads_ram.ldi: 
	* include/pkgconf/mlt_powerpc_fads_ram.mlt: 
	* include/plf_stub.h:
	* include/hal_diag.h:
	* cdl/hal_powerpc_fads.cdl: 
	Some changes towards virtual vector table support. Still needs
	ctrlc support before it can be enabled.

2000-06-13  Jesper Skov  <jskov@redhat.com>

	* include/plf_intr.h: Added.

2000-03-06  Jesper Skov  <jskov@redhat.com>

	* src/hal_diag.c (hal_diag_write_char): fix typo.

2000-03-02  Jesper Skov  <jskov@redhat.com>
