@@ -9,7 +9,7 @@ Red Hat does not maintain this code and does not guarantee its functionality
 in any way.
 
 All inquiries about this port should be directed to the 'ecos-discuss'
-mailing list (see http://sourceware.cygnus.com/ecos/intouch.html for
+mailing list (see http://ecos.sourceware.org/ecos/intouch.html for
 details).
 
 
